fix icon spacing in form items

--- a/services/frontend-v3/src/components/profileForms/qualificationsForm/educationForm/EducationFormView.scss
+++ b/services/frontend-v3/src/components/profileForms/qualificationsForm/educationForm/EducationFormView.scss
@@ -25,3 +25,7 @@
     margin-top: -8px !important;
   }
 }
+
+.formItemIcon {
+  margin-right: 0.5em;
+}
