--- a/services/frontend-v3/src/components/profileForms/qualificationsForm/experienceForm/ExperienceFormView.scss
+++ b/services/frontend-v3/src/components/profileForms/qualificationsForm/experienceForm/ExperienceFormView.scss
@@ -26,3 +26,7 @@
     margin-top: -8px !important;
   }
 }
+
+.formItemIcon {
+  margin-right: 0.5em;
+}
